module/core/former/tests/inc/former_tests/compiletime/struct_attr_bad.rs
use former::Former;

#[ derive( Former ) ]
#[ defaultx ]
pub struct Struct1
{
  int_1 : i32,
}

fn main()
{}